--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,11 +9,20 @@ jobs:
       - restore_cache:
           keys:
             - v1-dependencies-{{ checksum "package.json" }}
-            # fallback 
+            # fallback
             - v1-dependencies-
       - run: npm install
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - run: npm test
+      - setup_remote_docker
+      - run: docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+      - run:
+        name: "Build docker imageand push to docker hub"
+        command: |
+          cp Dockerfile.production Dockerfile
+          docker build -t darkpsart/example-nodejs-express:latest
+          docker push darkpsart/example-nodejs-express:latest
       - run: echo Done
