--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,6 @@ jobs:
           name: "Build docker imageand push to docker hub"
           command: |
             cp Dockerfile.production Dockerfile
-            docker build -t darkpsart/example-nodejs-express:latest
+            docker build -t darkpsart/example-nodejs-express:latest .
             docker push darkpsart/example-nodejs-express:latest
       - run: echo Done
